fix styling for travel on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -424,7 +424,7 @@ h3 {
         min-height:250px;
         height:auto;
         border-radius:25px;
-        padding:25px 25px;
+        padding: 21px 10px;
         background-color:#726680;
         color: #726680;
         clear:both;
