--- a/app/assets/stylesheets/details.scss
+++ b/app/assets/stylesheets/details.scss
@@ -160,8 +160,8 @@
     border: solid 1px black;
     width: 100%;
     display: inline-block;
-    padding-left: 39px;
-    padding-right: 39px;
+    padding-left: 20px;
+    padding-right: 20px;
     padding-top: 17px;
     padding-bottom: 20px;   
 }
